--- a/views/users/info.ejs
+++ b/views/users/info.ejs
@@ -13,16 +13,16 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="http://localhost:3000/">Home</a>
+          <a class="nav-link active" aria-current="page" href="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="http://localhost:3000/users/info">Info</a>
+          <a class="nav-link" href="/users/info">Info</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="http://localhost:3000/users/login">Log-in</a>
+          <a class="nav-link" href="/users/login">Log-in</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="http://localhost:3000/users/contribute">Contribute</a>
+          <a class="nav-link" href="/users/contribute">Contribute</a>
         </li>
       </ul>
       <a href="https://netsoc.com/"><button type="button" class="rounded-pill btn-rounded">Website</button></a>
@@ -53,7 +53,7 @@
                     <br><br><br><br><br>
                 </div>
                 <div class="col-md-4 image">
-                    <img src="http://localhost:3000/images/netsoc.png" alt="Netsoc Logo Name" width="400" height="400" class="netsoc-logo">
+                    <img src="/images/netsoc.png" alt="Netsoc Logo Name" width="400" height="400" class="netsoc-logo">
                 </div>
             </div>
         </div>
